# mcp-server-connector

./: .gitignore  .npmignore  README.md  package.json  publish.sh  pyproject.toml  requirements.txt  server.py  smithery.yaml
src/: index.ts
