[project]
name = "mcp-log-analyzer"
version = "1.0.0"
description = "MCP Server for analyzing project logs on remote cloud servers (Read-only)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "paramiko>=3.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-log-analyzer = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
