[project]
name = "mcp-server-connector"
version = "1.0.0"
description = "MCP Server for connecting to remote cloud servers and analyzing project files (Read-only)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "paramiko>=3.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-connector = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
